--- a/index.html
+++ b/index.html
@@ -1,23 +1,37 @@
-<h1 class="title">Filters</h1>
-<p class="subtitle">Based on notion filters</p>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/javascript.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Nested Filters</title>
+  </head>
 
-<div class="information">
-  <h2 class="information__title">Information</h2>
-  <ul class="information__list">
-    <li>
-      <a
-        href="https://developers.notion.com/reference/post-database-query-filter#the-filter-object"
-        >The filter object</a
-      >
-    </li>
-    <li>
-      <a
-        href="https://developers.notion.com/reference/post-database-query-filter#compound-filter-conditions"
-        >Compound filter conditions</a
-      >
-    </li>
-  </ul>
-</div>
+  <body>
+    <h1 class="title">Filters</h1>
+    <p class="subtitle">Based on notion filters</p>
 
-<div id="app"></div>
-<script type="module" src="./index.js"></script>
+    <div class="information">
+      <h2 class="information__title">Information</h2>
+      <ul class="information__list">
+        <li>
+          <a
+            href="https://developers.notion.com/reference/post-database-query-filter#the-filter-object"
+            >The filter object</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://developers.notion.com/reference/post-database-query-filter#compound-filter-conditions"
+            >Compound filter conditions</a
+          >
+        </li>
+      </ul>
+    </div>
+
+    <div id="app"></div>
+    <script type="module" src="./index.js"></script>
+
+  </body>
+</html>
+
